# coding-night-live

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.deps  Makefile.docker  Makefile.prepare  NOTICE  README.md  auto.py  auto_deploy.py  circus.ini  coding-night-live_nginx.conf  deploy.json  deploy_helper.py  docker-compose.yaml  fabfile.py  local_nginx.conf  manage.py  off.py  pw.txt  pyproject.toml  requirements.txt  secret.json  secret_key_gen.py  test-Makefile  undeploy_helper.py
coding_night_live/: apps.py  asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py  wsgi.py
coding_night_live/diff_match_patch/: java_hashcode_conv.py
coding_night_live/settings/: settings_base.py  settings_dev.py
collectd_static/css/: github-markdown.css
collectd_static/js/: cnl_rooms.js
collected_static/css/: cnl_print.css
collected_static/js/: cnl_chats.js  cnl_globals_override.js  cnl_slides_override.js  cnl_websocket.js
docs/: README.ko.md
manage_chat/: admin.py  apps.py  consumer.py  consumers.py  models.py  routing.py  setting.py  utils.py  views.py
manage_room/: admin.py  apps.py  consumers.py  exceptions.py  models.py  routing.py  urls.py  utils.py  views.py
manage_user/: apps.py  models.py
nginx/: Dockerfile  coding-night-live_nginx.conf  docker_nginx.conf  nginx.conf
postgres/: Makefile  init.sql  init_sql.sh
templates/: .room.html.swp  404.html  500.html  505.html  [Test]get list of notice, poll, chat and reply.py  list.html  login.html  main.html  print.html  room.html
test/: Makefile
(+42 files in other folders)
